--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
@@ -14,20 +15,26 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.3",
     "burger-menu": "^2.0.0",
+    "classnames": "^2.3.2",
     "embla-carousel": "^7.0.9",
     "helpers": "^0.0.6",
     "react": "^18.2.0",
     "react-auto-image-slider": "^1.0.0",
     "react-awesome-slider": "^2.4.0",
+    "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
     "react-google-maps": "^9.4.5",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-swipeable-views": "^0.14.0",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.57.1",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
